# VHP-Vibro-Glove2

./: CHANGELOG.md  CMakeLists.txt  README.md  SStream-test.cpp  arduino-mock.hpp
3D Fingerbed/: 3D files
BOM/: BOM  BOM.ods
VHP-Vibro-Glove2/: BleComm.hpp  CSense.hpp  DLog.hpp  Latency_Jitter_Manual.md  Message.hpp  SStream.hpp  SampleCache.hpp  Serial_Command_Manual.md  Serial_Set_Parameters_Manual.md  Settings.hpp  VHP-Vibro-Glove2.ino  latency usb.md  latency usb.odt  measure _latency_jitter.py  parameter_set_via_serial.py
VHP-Vibro-Glove2/src/: BatteryMonitor.hpp  BleComm.hpp  BoardDefs.hpp  DLog.hpp  Max14661.hpp  Message.hpp  PwmTactor.hpp  SStream.hpp  SampleCache.hpp  Settings.hpp  UI.hpp
VHP-Vibro-Glove2/src/att/: Serialize.hpp  Slice.hpp  StdShim.hpp
doc/: Gen13.stl  Hardware.md  Software-Installation.md  Software.md  Usage.md  curses.ods  filter-sim.ods  measure1.ods  settings.ods  settings2.ods
doc/BOM/: BOM v22.ods
doc/arch/: 001-bluetooth-communication.md
doc/measurements/: readme.md
latency/: measure _latency_jitter (2).py  📝 Manual for measure_latency.md
tests/: CSense-test.cpp  SStream-test.cpp  SampleCache-test.cpp  arduino-mock.hpp
webui/: README.md  f2heal_library.js  f2heal_webui.css  f2heal_webui.html  f2heal_webui.js  f2heal_webui_auto.html  f2heal_webui_v2.css  f2heal_webui_v2.html  presets.json  wiring_tactors.html
webui21/: f2heal_library.js  f2heal_webui.js  f2heal_webui_v2_1.css  f2heal_webui_v2_1.html  presets.json  readme.md
